--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,15 +1,17 @@
 <% provide(:title, 'Home Page') %>
 
 <div class="center hero-unit">
-  <h1>Welcome to the Sample App</h1>
+  <h1>HETEXTED en Español!</h1>
 
   <h2>
-    This is the home page for the
-    <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
-    sample application.
+    Tengo un mensaje de este chico y no sé que me quiere decir...!
+   
   </h2>
 
   <%= link_to "Sign up now!", signup_path , class: "btn btn-large btn-primary" %>
+
+<%= link_to "Pregúntanos", signup_path , class: "btn btn-large btn-primary" %>
+
 </div>
 
 <%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
